--- a/quotation.html
+++ b/quotation.html
@@ -136,7 +136,7 @@
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-sm-flex green-bg qutationpage">
+                      <div class="que-head d-none d-md-flex green-bg qutationpage">
                         <div><h4>報價日期</h4></div>
                         <div><h4>網上報價編號</h4></div>
                         <div class="exception-tab"><h4>服務名稱</h4></div>
@@ -153,13 +153,13 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">已確認報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$5000.00</h4></div>                    
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                         </div></div>
-                        <div  class="que-gray-flex d-sm-none action-mobile">
+                        <div  class="que-gray-flex d-md-none action-mobile">
                           <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                           <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -172,13 +172,13 @@
                             <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                             <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                             <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
-                            <div class="d-none d-sm-block que-gray-flex"> 
+                            <div class="d-none d-md-block que-gray-flex"> 
                               <div class="action-td">
                               <img src="assets/images/upload.png" alt="">
                               <img src="assets/images/dowonload.png" alt="">
                               <img src="assets/images/erro.png" alt="">
                           </div></div>
-                          <div  class="que-gray-flex d-sm-none action-mobile ">
+                          <div  class="que-gray-flex d-md-none action-mobile ">
                             <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                             <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                             <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -191,14 +191,14 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2500.00</h4></div>                    
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile">
+                        <div  class="que-gray-flex d-md-none action-mobile">
                           <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                           <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -211,14 +211,14 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$3950.00</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
                       </div>
-                          <div  class="que-gray-flex d-sm-none action-mobile">
+                          <div  class="que-gray-flex d-md-none action-mobile">
                             <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                             <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                             <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -231,14 +231,14 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$5000.00</h4></div>                    
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile">
+                        <div  class="que-gray-flex d-md-none action-mobile">
                           <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                           <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -251,14 +251,14 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
                       </div>
-                          <div  class="que-gray-flex d-sm-none action-mobile">
+                          <div  class="que-gray-flex d-md-none action-mobile">
                             <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                             <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                             <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -271,14 +271,14 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2500.00</h4></div>                    
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                             </div>
                       </div>
-                        <div  class="que-gray-flex d-sm-none action-mobile">
+                        <div  class="que-gray-flex d-md-none action-mobile">
                           <div class="action-btn"><img src="assets/images/upload.png" alt=""> <span>上載</span></div>
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                           <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
@@ -299,7 +299,7 @@
                   </div>
                   <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
                     <div class="quontation-table">
-                      <div class="que-head d-none d-sm-flex green-bg qutationpage">
+                      <div class="que-head d-none d-md-flex green-bg qutationpage">
                         <div><h4>報價日期</h4></div>
                         <div><h4>網上報價編號</h4></div>
                         <div><h4>服務名稱</h4></div>
@@ -316,12 +316,12 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$3050.00</h4></div>                    
-                          <div class="d-none d-sm-block que-gray-flex"> 
+                          <div class="d-none d-md-block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
                         </div></div>
-                        <div  class="que-gray-flex d-sm-none action-mobile">
+                        <div  class="que-gray-flex d-md-none action-mobile">
                           <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                           <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
                         </div>
@@ -333,12 +333,12 @@
                             <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                             <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
                             <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
-                            <div class="d-none d-sm-block que-gray-flex"> 
+                            <div class="d-none d-md-block que-gray-flex"> 
                               <div class="action-td">
                               <img src="assets/images/dowonload.png" alt="">
                               <img src="assets/images/erro.png" alt="">
                           </div></div>
-                          <div  class="que-gray-flex d-sm-none action-mobile">
+                          <div  class="que-gray-flex d-md-none action-mobile">
                             <div class="action-btn"><img src="assets/images/dowonload.png" alt=""> <span>下載</span></div>
                             <div class="action-btn"><img src="assets/images/erro.png" alt=""> <span>詳情</span></div>
                           </div>
