header all pages

--- a/broadcast_message.html
+++ b/broadcast_message.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="header-data">
         <h3>教城主頁</h3>
-        <div class="header-right d-none d-sm-flex">
+        <div class="header-right d-none d-md-flex">
           <img src="assets/images/Layer 2 1.png" alt="" />
           <h3>Jay Chu</h3>
           <h4>English</h4>
@@ -49,7 +49,7 @@
         <div>
           <img src="assets/images/image 1.png" class="logo-img" alt="" />
         </div>
-        <div class="main-tab-box d-none d-sm-flex">
+        <div class="main-tab-box d-none d-md-flex">
               <a href="event_register_list.html" class="main-left-data">
                 <img src="assets/images/main1.png" alt="" />
                 <div class="main-border">
@@ -64,12 +64,12 @@
               </a>
               <a href="broadcast_message.html" class="main-left-data">
                 <img src="assets/images/main3.png" alt="" />
-                <div class="main-border fix">
-                  <h3 class="active">個人中心</h3>
+                <div class="main-border">
+                  <h3 class="text-orange">個人中心</h3>
                 </div>
               </a>
         </div>
-          <div class="menubar d-sm-none ">
+          <div class="menubar d-md-none ">
               <img src="assets/images/bar.png" alt="" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
           </div>
           <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
