--- a/event_registerlist_all_event.html
+++ b/event_registerlist_all_event.html
@@ -31,82 +31,82 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 <body>
-    <header>
-        <div class="container">
-          <div class="header-data">
-            <h3>教城主頁</h3>
-            <div class="header-right d-none d-sm-flex">
-              <img src="assets/images/Layer 2 1.png" alt="" />
-              <h3>Jay Chu</h3>
-              <h4>English</h4>
-              <img src="assets/images/HouseDoorFill.png" alt="" />
-            </div>
-          </div>
+  <header>
+    <div class="container">
+      <div class="header-data">
+        <h3>教城主頁</h3>
+        <div class="header-right d-none d-md-flex">
+          <img src="assets/images/Layer 2 1.png" alt="" />
+          <h3>Jay Chu</h3>
+          <h4>English</h4>
+          <img src="assets/images/HouseDoorFill.png" alt="" />
         </div>
-      </header>
-  
-      <!-- --main-- -->
-      <section class="main">
-        <div class="container">
-          <div class="main-data">
-            <div>
-              <img src="assets/images/image 1.png" class="logo-img" alt="" />
-            </div>
-            <div class="main-tab-box d-none d-sm-flex ">
-                  <a href="event_register_list.html" class="main-left-data">
-                    <img src="assets/images/main1.png" alt="" />
-                    <div class="main-border fix">
-                      <h3 class="active">活動概覽</h3>
+      </div>
+    </div>
+  </header>
+
+  <!-- --main-- -->
+  <section class="main">
+    <div class="container">
+      <div class="main-data">
+        <div>
+          <img src="assets/images/image 1.png" class="logo-img" alt="" />
+        </div>
+        <div class="main-tab-box d-none d-md-flex">
+              <a href="event_register_list.html" class="main-left-data">
+                <img src="assets/images/main1.png" alt="" />
+                <div class="main-border">
+                  <h3>活動概覽</h3>
+                </div>
+              </a>
+              <a href="edmall.html" class="main-left-data">
+                <img src="assets/images/main2.png" alt="" />
+                <div class="main-border">
+                  <h3>EdMall</h3>
+                </div>
+              </a>
+              <a href="broadcast_message.html" class="main-left-data">
+                <img src="assets/images/main3.png" alt="" />
+                <div class="main-border">
+                  <h3 class="text-orange">個人中心</h3>
+                </div>
+              </a>
+        </div>
+          <div class="menubar d-md-none ">
+              <img src="assets/images/bar.png" alt="" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+          </div>
+          <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class=" modal-dialog modal-dialog-scrollable">
+              <div class="modal-content">
+                <div class="modal-header">
+                      <div class="header-data">
+                        <h3>教城主頁</h3>
                     </div>
-                  </a>
-                  <a href="edmall.html" class="main-left-data">
-                    <img src="assets/images/main2.png" alt="" />
-                    <div class="main-border ">
-                      <h3>EdMall</h3>
-                    </div>
-                  </a>
-                  <a href="broadcast_message.html" class="main-left-data">
-                    <img src="assets/images/main3.png" alt="" />
-                    <div class="main-border">
-                      <h3 class="text-orange">個人中心</h3>
-                    </div>
-                  </a>
-            </div>
-              <div class="menubar d-sm-none ">
-                  <img src="assets/images/bar.png" alt="" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-              </div>
-              <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                <div class=" modal-dialog modal-dialog-scrollable">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                          <div class="header-data">
-                            <h3>教城主頁</h3>
-                        </div>
-                      <div class="mobile-logo">
-                        <img src="assets/images/image 2.png" alt="">
-                        <img src="assets/images/Vector (5).png" alt="" data-bs-dismiss="modal" aria-label="Close">
-                      </div>
-                      <div class="language">
-                        <div class="language-div"><span>繁</span><h3>  English</h3></div>
-                        <h2>會員登入</h2>
-                      </div>
-                    </div>
-                    <div class="modal-body">
-                      <ul class="modal-list">
-                       <li><h3>活動概覽</h3>
-                         <a href="event_register_list.html"><i class="fa-solid fa-chevron-right"></i></a></li>
-                       <li class="no-space"><h3>Ed Mall</h3>
-                       <a href="edmall.html">  <i class="fa-solid fa-chevron-right"></i></a></li>
-                       <li><h3>個人中心</h3>
-                        <a href="broadcast_message.html"> <i class="fa-solid fa-chevron-right"></i></a></li>
-                      </ul>
-                   </div>
+                  <div class="mobile-logo">
+                    <img src="assets/images/image 2.png" alt="">
+                    <img src="assets/images/Vector (5).png" alt="" data-bs-dismiss="modal" aria-label="Close">
+                  </div>
+                  <div class="language">
+                    <div class="language-div"><span>繁</span><h3>  English</h3></div>
+                    <h2>會員登入</h2>
                   </div>
                 </div>
+                <div class="modal-body">
+                  <ul class="modal-list">
+                   <li><h3>活動概覽</h3>
+                     <a href="event_register_list.html"><i class="fa-solid fa-chevron-right"></i></a></li>
+                   <li class="no-space"><h3>Ed Mall</h3>
+                   <a href="edmall.html">  <i class="fa-solid fa-chevron-right"></i></a></li>
+                   <li><h3>個人中心</h3>
+                    <a href="broadcast_message.html"> <i class="fa-solid fa-chevron-right"></i></a></li>
+                  </ul>
+               </div>
               </div>
+            </div>
           </div>
-        </div>
-      </section>
+      </div>
+    </div>
+  </section>
      
       <section class="register-list-form all-event-form">
         <div class="container">
