--- a/partner_add_event.html
+++ b/partner_add_event.html
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="header-data">
         <h3>教城主頁</h3>
-        <div class="header-right d-none d-sm-flex">
+        <div class="header-right d-none d-md-flex">
           <img src="assets/images/Layer 2 1.png" alt="" />
           <h3>Jay Chu</h3>
           <h4>English</h4>
@@ -52,7 +52,7 @@
         <div>
           <img src="assets/images/image 1.png" class="logo-img" alt="" />
         </div>
-        <div class="main-tab-box d-none d-sm-flex">
+        <div class="main-tab-box d-none d-md-flex">
               <a href="event_register_list.html" class="main-left-data">
                 <img src="assets/images/main1.png" alt="" />
                 <div class="main-border">
@@ -65,14 +65,14 @@
                   <h3>EdMall</h3>
                 </div>
               </a>
-              <a href="partner_add_event.html" class="main-left-data">
+              <a href="broadcast_message.html" class="main-left-data">
                 <img src="assets/images/main3.png" alt="" />
-                <div class="main-border fix">
-                  <h3 class="active" >個人中心</h3>
+                <div class="main-border">
+                  <h3 class="text-orange">個人中心</h3>
                 </div>
               </a>
         </div>
-          <div class="menubar d-sm-none ">
+          <div class="menubar d-md-none ">
               <img src="assets/images/bar.png" alt="" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
           </div>
           <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
