header and quatation.html

--- a/partner.html
+++ b/partner.html
@@ -62,10 +62,10 @@
                   <h3>EdMall</h3>
                 </div>
               </a>
-              <a href="broadcast_message.html" class="main-left-data">
+              <a href="partner.html" class="main-left-data">
                 <img src="assets/images/main3.png" alt="" />
-                <div class="main-border">
-                  <h3 class="text-orange">個人中心</h3>
+                <div class="main-border fix">
+                  <h3 class="active" >個人中心</h3>
                 </div>
               </a>
         </div>
@@ -289,7 +289,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="table-pagination mt-5 mt-sm-0">
+                <div class="table-pagination mt-5 mt-md-0">
                     <ul>
                         <li><a href="#" class="active">1</a></li>
                         <li><a href="#">2</a></li>
