--- a/partner_add_event.html
+++ b/partner_add_event.html
@@ -65,10 +65,10 @@
                   <h3>EdMall</h3>
                 </div>
               </a>
-              <a href="broadcast_message.html" class="main-left-data">
+              <a href="partner_add_event.html" class="main-left-data">
                 <img src="assets/images/main3.png" alt="" />
-                <div class="main-border">
-                  <h3 class="text-orange">個人中心</h3>
+                <div class="main-border fix">
+                  <h3 class="active" >個人中心</h3>
                 </div>
               </a>
         </div>
