--- a/broadcast_message.html
+++ b/broadcast_message.html
@@ -64,8 +64,8 @@
               </a>
               <a href="broadcast_message.html" class="main-left-data">
                 <img src="assets/images/main3.png" alt="" />
-                <div class="main-border">
-                  <h3 class="text-orange">個人中心</h3>
+                <div class="main-border fix">
+                  <h3 class="active">個人中心</h3>
                 </div>
               </a>
         </div>
