--- a/event_registration.html
+++ b/event_registration.html
@@ -28,20 +28,19 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <div class="header-data">
-        <h3>教城主頁</h3>
-        <div class="header-right d-none d-md-flex">
-          <img src="assets/images/Layer 2 1.png" alt="" />
-          <h3>Jay Chu</h3>
-          <h4>English</h4>
-          <img src="assets/images/HouseDoorFill.png" alt="" />
+    <header>
+        <div class="container">
+          <div class="header-data">
+            <h3>教城主頁</h3>
+            <div class="header-right d-none d-md-flex">
+              <img src="assets/images/Layer 2 1.png" alt="" />
+              <h3>Jay Chu</h3>
+              <h4>English</h4>
+              <img src="assets/images/HouseDoorFill.png" alt="" />
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </header>
-
+      </header>
   <!-- --main-- -->
   <section class="main">
     <div class="container">
@@ -50,7 +49,7 @@
           <img src="assets/images/image 1.png" class="logo-img" alt="" />
         </div>
         <div class="main-tab-box d-none d-md-flex">
-              <a href="event_register_list.html" class="main-left-data">
+              <a href="event_register_list" class="main-left-data">
                 <img src="assets/images/main1.png" alt="" />
                 <div class="main-border">
                   <h3>活動概覽</h3>
