--- a/quotation.html
+++ b/quotation.html
@@ -153,7 +153,7 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">已確認報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$5000.00</h4></div>                    
-                          <div class="d-none d-md-block que-gray-flex"> 
+                          <div class="d-none d--block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
@@ -172,7 +172,7 @@
                             <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                             <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                             <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
-                            <div class="d-none d-md-block que-gray-flex"> 
+                            <div class="d-none d--block que-gray-flex"> 
                               <div class="action-td">
                               <img src="assets/images/upload.png" alt="">
                               <img src="assets/images/dowonload.png" alt="">
@@ -191,7 +191,7 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2500.00</h4></div>                    
-                          <div class="d-none d-md-block que-gray-flex"> 
+                          <div class="d-none d--block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
@@ -211,7 +211,7 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$3950.00</h4></div>
-                          <div class="d-none d-md-block que-gray-flex"> 
+                          <div class="d-none d--block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
@@ -231,7 +231,7 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$5000.00</h4></div>                    
-                          <div class="d-none d-md-block que-gray-flex"> 
+                          <div class="d-none d--block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
@@ -251,7 +251,7 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn puprple-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
-                          <div class="d-none d-md-block que-gray-flex"> 
+                          <div class="d-none d--block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
@@ -271,7 +271,7 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2023/09/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn orange-btn">開始報價</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$2500.00</h4></div>                    
-                          <div class="d-none d-md-block que-gray-flex"> 
+                          <div class="d-none d--block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/upload.png" alt="">
                             <img src="assets/images/dowonload.png" alt="">
@@ -316,7 +316,7 @@
                           <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                           <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
                           <div class="que-gray-flex"><h3>報價金額</h3><h4>$3050.00</h4></div>                    
-                          <div class="d-none d-md-block que-gray-flex"> 
+                          <div class="d-none d--block que-gray-flex"> 
                             <div class="action-td">
                             <img src="assets/images/dowonload.png" alt="">
                             <img src="assets/images/erro.png" alt="">
@@ -333,7 +333,7 @@
                             <div class="que-gray-flex"><h3>服務日期範圍</h3><h4>2024/01/01 - 2024/08/31</h4></div>
                             <div class="que-gray-flex"><h3>服務狀態</h3><h4><button class="state-td btn gray-btn">已完成</button></h4></div>
                             <div class="que-gray-flex"><h3>報價金額</h3><h4>$3450.00</h4></div>
-                            <div class="d-none d-md-block que-gray-flex"> 
+                            <div class="d-none d--block que-gray-flex"> 
                               <div class="action-td">
                               <img src="assets/images/dowonload.png" alt="">
                               <img src="assets/images/erro.png" alt="">
