--- a/edmall.html
+++ b/edmall.html
@@ -378,7 +378,7 @@
                   <div class="close closePopup"><i class="fa-solid fa-circle-xmark"></i></div>
                   <div class="img-center"> <img src="assets/images/readmore.png"  alt=""></div>
                 <div class="pop-list row">
-                  <div class="col-12 col-sm-4">
+                  <div class="col-12 col-md-4">
                     <h5>教城閱讀組合 23/24</h5>
                     <ul>
                       <li><span>數量 :</span><span>100本</span></li>
@@ -386,7 +386,7 @@
                       <li><span>全校人數 :</span><span>200人或以下</span></li>
                     </ul>
                   </div>
-                  <div class="col-12 col-sm-8" >
+                  <div class="col-12 col-md-8" >
                     <p>學校可訂購「e悅讀學校計劃」的「教城閱讀組合23/24」全年服務。此閱讀組合以100本電子書為基本，學校可選擇增加訂閱書籍數目，數量以每50本為倍數遞增（即150、200、250本……如此類推）。</p>
                   </div>
                 </div>
